<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="40dp"
    android:background="#43b3e6"
    style="@style/AppTheme"
    tools:context=".Almost">


    <LinearLayout
        android:layout_gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/txt_almost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_almost"
            android:textSize="@dimen/dimen30"
            android:layout_marginBottom="@dimen/dimen20"
            android:gravity="center_horizontal"
            android:textColorHint="@color/colorWhite"
            />
        <TextView
            android:id="@+id/txt_thank"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/txt_thank"
            android:gravity="center_horizontal"
            android:textColorHint="@color/colorWhite"
            />

        <Button
            android:layout_marginBottom="@dimen/dimen10"
            android:layout_marginTop="@dimen/dimen40"
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@drawable/transparent_bg_bordered"
            android:text="@string/txt_verify"
            android:padding="@dimen/dimen10"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>