<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/ly_utama"
        tools:ignore="MissingConstraints">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen120"
                android:id="@+id/atas"
                android:background="@drawable/ic_header_profile"
                />
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen100"
                android:layout_marginTop="@dimen/dimen80"
                android:layout_marginStart="@dimen/dimen100"
                android:layout_marginEnd="@dimen/dimen100"
                android:src="@drawable/saya"
                app:civ_border_color="@color/colorWhite"
                app:civ_border_width="@dimen/dimen7"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nama"
                android:layout_marginTop="@dimen/dimen180"
                android:padding="@dimen/dimen10"
                android:gravity="center"
                android:textColor="@color/bg_main"
                android:textSize="@dimen/dimen20"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/type"
                android:layout_marginTop="@dimen/dimen220"
                android:gravity="center"
                android:textColor="@color/font_desc"
                android:textSize="@dimen/dimen15"
                />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite"
            android:orientation="horizontal"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen40"
            android:paddingRight="@dimen/dimen40"
            >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/satu"
                    android:textColor="@color/bg_main"
                    android:textSize="@dimen/dimen40"
                    android:layout_weight="1"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/empat"
                    android:textColor="@color/font_title"
                    android:textSize="@dimen/dimen10"
                    android:layout_weight="1"
                    android:gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dua"
                    android:textColor="@color/bg_main"
                    android:textSize="@dimen/dimen40"
                    android:layout_weight="1"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lima"
                    android:textColor="@color/font_title"
                    android:textSize="@dimen/dimen10"
                    android:layout_weight="1"
                    android:gravity="center"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorWhite"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_weight="1"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiga"
                    android:textColor="@color/bg_main"
                    android:textSize="@dimen/dimen40"
                    android:layout_weight="1"
                    android:gravity="center"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enam"
                    android:textColor="@color/font_title"
                    android:textSize="@dimen/dimen10"
                    android:layout_weight="1"
                    android:gravity="center"
                    />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingLeft="@dimen/dimen40"
            android:paddingRight="@dimen/dimen40"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dimen20"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen150"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/dimen10"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/satu"
                        android:textColor="@color/bg_main"
                        android:textSize="@dimen/dimen40"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/ic_search_donor"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Search Donor"
                        android:textColor="@color/font_title"
                        android:textSize="@dimen/dimen15"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Search donor near you"
                        android:textColor="@color/font_title"
                        android:textSize="@dimen/dimen7"
                        android:gravity="center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen150"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dimen20"
                    android:paddingRight="@dimen/dimen20"
                    android:padding="@dimen/dimen10"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tiga"
                        android:textColor="@color/bg_main"
                        android:textSize="@dimen/dimen40"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/ic_blood_needed"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Blood Needeed"
                        android:textColor="@color/font_title"
                        android:textSize="@dimen/dimen15"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4 User need blood"
                        android:textColor="@color/font_title"
                        android:textSize="@dimen/dimen7"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_weight="1"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen150"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:padding="@dimen/dimen10"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/satu"
                        android:textColor="@color/bg_main"
                        android:textSize="@dimen/dimen40"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/ic_message"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Message"
                        android:textColor="@color/font_title"
                        android:textSize="@dimen/dimen15"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5 New Message"
                        android:textColor="@color/font_title"
                        android:textSize="@dimen/dimen7"
                        android:gravity="center"
                        />

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/dimen150"
                    android:background="@color/colorWhite"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_weight="1"
                    android:paddingLeft="@dimen/dimen20"
                    android:paddingRight="@dimen/dimen20"
                    android:padding="@dimen/dimen10"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tiga"
                        android:textColor="@color/bg_main"
                        android:textSize="@dimen/dimen40"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:src="@drawable/ic_donor_history"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Donor History"
                        android:textColor="@color/font_title"
                        android:textSize="@dimen/dimen15"
                        android:gravity="center"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5 Gives, 2 Receive"
                        android:textColor="@color/font_title"
                        android:textSize="@dimen/dimen7"
                        android:gravity="center"
                        />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>